Crash on Render when using 'save buffer' and render layer name contains a '/' #43275

Closed
opened 2015-01-16 11:35:10 +01:00 by Jürgen Müller · 7 comments

System Information
OS: Mac OSX 10.10.1
Graphics Card: AMD Radeon HD 6970M 2048 MB

AND

OS: Windows 8.1
Graphics Card: Nvidia Geforce GTX570

Blender Version
Broken: 2.73
Worked: ?

Short description of error
Crash on Render a "Render Layer" with "/" in the name and "Save Buffers" enabled (Cycles)

Exact steps for others to reproduce the error

  1. Open Blender standard startup file
  2. Switch to "Cycles Render"
  3. Goto "Render Layers" Tab
  4. Change the Render Layer name from eg. "RenderLayer" to "Render/Layer" (slash is the problem!)
  5. Goto "Render" Tab
  6. Under Performance tick "Save Buffers"
  7. Hit F12 (Render) -> Crash
**System Information** OS: Mac OSX 10.10.1 Graphics Card: AMD Radeon HD 6970M 2048 MB AND OS: Windows 8.1 Graphics Card: Nvidia Geforce GTX570 **Blender Version** Broken: 2.73 Worked: ? **Short description of error** Crash on Render a "Render Layer" with "/" in the name and "Save Buffers" enabled (Cycles) **Exact steps for others to reproduce the error** 1. Open Blender standard startup file 2. Switch to "Cycles Render" 3. Goto "Render Layers" Tab 4. Change the Render Layer name from eg. "RenderLayer" to "Render/Layer" (slash is the problem!) 4. Goto "Render" Tab 5. Under Performance tick "Save Buffers" 6. Hit F12 (Render) -> Crash

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GeorgeMiller

Added subscriber: @GeorgeMiller

Added subscriber: @mont29

Added subscriber: @mont29

Also affects BI as well…

Also affects BI as well…
Bastien Montagne changed title from Crash on Render (Cycles) to Crash on Render when using 'save buffer' and render layer name contains a '/' 2015-01-16 18:11:04 +01:00
Bastien Montagne self-assigned this 2015-01-16 18:11:04 +01:00

This issue was referenced by 585275325e

This issue was referenced by 585275325edb9988c9d6891c1fe571c63c81ceb1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 585275325e.

Closed by commit 585275325e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43275
No description provided.