Fix T43275: Crash on Render when using 'save buffer' and render layer name contains a '/'

Added a new BLI_path_utils func, `BLI_filename_make_safe()`, which for now simply
replaces unsafe chars for paths (like '\' or '/') by an underscore...